app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "bootstrap/scss/bootstrap";
@import "all";
@import "sb-admin-2";
@import "tablesort";
@import "noty/src/noty.scss";
@import "noty/src/themes/metroui.scss";
@import "easy-autocomplete.css";

:root {
  --main-colour: #227093;
}

// Mixins

@mixin card-shadow {
  box-shadow: 0px 5px 10px 1px #d1d9e6;
}

@mixin drop-shadow($button: false) {
  @if $button {
    box-shadow: 10px 10px 15px #d1d9e6, -10px -10px 15px #fff;
  } @else {
    box-shadow: 18px 18px 30px #d1d9e6, -18px -18px 30px #fff;
  }
}

@mixin btn-shadow {
  box-shadow: 0 0 5px #d1d9e6;
}

@mixin pill($type, $number, $colour) {
  .#{$type}-pill-#{$number} {
    @include btn-shadow;
    background: #{$colour};
    color: var(--light);
    border-radius: 500px;
    padding: 0.2em 0.5em;
    text-align: center;
    vertical-align: bottom;
    &.show-ticket-#{$type} {
      width: fit-content;
      padding-left: 1em;
      padding-right: 1em;
    }
  }
}

@include pill(priority, 1, var(--gray));
@include pill(priority, 2, var(--yellow));
@include pill(priority, 3, var(--orange));
@include pill(priority, 4, var(--red));
@include pill(type, 1, var(--red));
@include pill(type, 2, var(--teal));
@include pill(type, 3, var(--cyan));

.profile-round {
  border-radius: 50%;
  width: 200px;
  height: 200px;
}

#content {
  margin-top: 80px;
}

// Styling for buttons
.btn-primary {
  background-color: #ffa72b;
  border-color: #ffa72b;
  &:hover {
    background-color: #fda01e;
    border-color: #fda01e;
  }
}

.btn-success {
  background-color: #218c41;
  border-color: #218c41;
  &:hover {
    background-color: #1e7c3a;
    border-color: #1e7c3a;
  }
}

.nav-button {
  // @include drop-shadow(true);
  padding: 6px;
  background-color: #e7e7e7;
  margin-right: 5px;
  border-radius: 10px;
  color: #4f5058;
  &:hover {
    color: #4f5058;
    background-color: #e8ebee;
  }
}

.add-btn {
  color: var(--primary);
  background-color: inherit;
  border: none;
  &:hover {
    color: var(--primary);
    background-color: none;
    @include btn-shadow;
    border: none;
  }
}

.back-btn {
  color: #4f5058;
  background-color: inherit;
  border: none;
  &:hover {
    color: #4f5058;
    background-color: none;
    @include btn-shadow;
    border: none;
  }
}

.edit-btn {
  color: var(--main-colour);
  background-color: inherit;
  border: none;
  &:hover {
    color: var(--main-colour);
    background-color: inherit;
    @include btn-shadow;
    border: none;
  }
}

.delete-btn {
  color: var(--danger);
  background-color: inherit;
  border: none;
  &:hover {
    background-color: inherit;
    color: var(--danger);
    @include btn-shadow;
    border: none;
  }
}

.ok-btn {
  color: var(--success);
  background-color: inherit;
  border: none;
  &:hover {
    background-color: inherit;
    color: var(--success);
    @include btn-shadow;
    border: none;
  }
}

// Styling for cards

.card {
  @include card-shadow;
}
.card-header {
  min-height: 81px;
}

.pagination {
  .page-item > .page-link {
    color: var(--main-text);
  }

  .page-item.disabled .page-link {
    color: #858796;
  }

  li.active > .page-link {
    color: #fff;
    background-color: var(--main-colour);
  }
}

// Styling for selectors
.custom-selector {
  display: inline-block;
  width: 100%;
  height: calc(1.5em + 0.75rem + 2px);
  padding: 0.375rem 1.75rem 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #6e707e;
  vertical-align: middle;
  background: #fff
    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e")
    no-repeat right 0.75rem center/8px 10px;
  border: 1px solid #d1d3e2;
  border-radius: 0.35rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.custom-selector:focus {
  border-color: #bac8f3;
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
}

.custom-selector:focus::-ms-value {
  color: #6e707e;
  background-color: #fff;
}

// Styling for tables

.content-table {
  // @include drop-shadow;
  border-collapse: collapse;
  margin-bottom: 5px;
  font-size: 0.9em;
  width: 100%;
  // border-radius: 5px 5px 0 0;
  overflow: hidden;
  background-color: #fff;
  thead tr {
    background-color: #d1d1d1;
    color: var(--main-text);
    text-align: left;
    font-weight: bold;
    height: 3em;
    font-size: 1.2em;
    border-bottom: 2px solid var(--primary);
  }
  th,
  td {
    padding: 12px 15px;
  }
  tbody {
    tr {
      // &:last-of-type {
      // border-bottom: 2px solid #d1d1d1;
      // }
      &:nth-child(even) {
        background-color: #e7e7e7;
      }
      &.active-row {
        font-weight: bold;
        color: #009879;
      }
    }
  }
}

.nowrap-column,
th {
  white-space: nowrap;
}

.ticket-comments-form {
  margin: 10px;
}

.admin-status-col {
  vertical-align: center;
  text-align: center;
}

.yes-admin {
  color: var(--success);
}

.no-admin {
  color: var(--danger);
}

.admin-status-title {
  text-align: center;
}

@include pill(status, 1, var(--red));
@include pill(status, 2, var(--blue));
@include pill(status, 3, var(--green));
@include pill(status, 4, var(--orange));

tr[data-href] {
  cursor: pointer;
  &:hover {
    // text-shadow: 0 0 0 rgba(0, 0, 0, 1.5);
    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
  }
}

// Styling for file input

.custom-file > * {
  cursor: pointer;
}

// Styling for dropdown submenu

.dropdown-submenu {
  position: relative;
  .dropdown-menu {
    top: 0;
    left: 100%;
  }
}

#languageDropdown,
#search-button {
  color: var(--main-colour);
}

